--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <!-- Image sections -->
+        <img src="main.png" class="scroll-image" alt="Image 0">
         <img src="a.png" class="scroll-image" alt="Image 1">
 <img src="b.png" class="scroll-image" alt="Image 2">
 <img src="c.png" class="scroll-image" alt="Image 3">
