--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="heart-container"></div> <!-- ❤️ Floating hearts -->
     <div class="container">
         <!-- Image sections -->
         <img src="main.png" class="scroll-image" alt="Image 0">
