--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>For Her</title>
+    <title>For my madam ji</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -46,6 +46,7 @@
             <p>So, here I am asking with an open heart:</p>
             <p><strong>Will you like to build a relationship with me?<br>Will you be my girlfriend again?</strong></p>
             <p>No pressure. Just love and honesty. Whatever you decide, I’ll respect it.</p>
+            <button id="yesButton">Yes 💖</button>
         </div>
     </div>
     <script src="script.js"></script>
