--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             <p>So, here I am asking with an open heart:</p>
             <p><strong>Will you like to build a relationship with me?<br>Will you be my girlfriend again?</strong></p>
             <p>No pressure. Just love and honesty. Whatever you decide, I’ll respect it.</p>
+                    <a href="https://forms.gle/mLaSYujEcA8SJ3ua9" target="_blank">
             <button id="yesButton">Yes 💖</button>
+        </a>
         </div>
     </div>
     <script src="script.js"></script>
